--- a/branch.html
+++ b/branch.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Branches</title>
-    <link rel="icon" href="images/logo-icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="branch.css" />
   </head>
   <body>
     <header>
+      <div class="logo">
+        <a href="index.html"><img src="images/logo-icon.jpg" class="logo-icon"></a>
+      </div>
+
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -138,5 +141,12 @@
             </ul>
         </div>
       </footer>
+
+      <script type="text/javascript">
+        window.addEventListener('scroll', function () {
+          const header = document.querySelector('header');
+          header.classList.toggle("sticky", window.scrollY > 0);
+        });
+      </script>
   </body>
 </html>
