--- a/index.html
+++ b/index.html
@@ -4,29 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="icon" href="images/logo-icon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div class="wrapper">
-        <nav>
-            <div class="nav-logo">
-              <img src="images/logo-icon.jpg" alt="LOGO">
-            </div>
-            &nbsp;
-            <div class="menue">
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="branch.html">Branches</a></li>
-                <li><a href="adventure.html">Adventures</a></li>
-                <li><a href="restuarent.html">Resturants</a></li>
-                <li><a href="booking.html">Booking</a></li>
-              </ul>
-            </div>
-        </nav>
-    </div>
+      <div class="logo">
+        <a href="index.html"><img src="images/logo-icon.jpg" class="logo-icon"></a>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="branch.html">Branches</a></li>
+          <li><a href="adventure.html">Adventures</a></li>
+          <li><a href="restuarent.html">Resturants</a></li>
+          <li><a href="booking.html">Booking</a></li>
+        </ul>
+      </nav>
     </header>
     <section>
       <img src="images/logo2.jpg" alt="logo" class="image" />
@@ -43,9 +41,11 @@
         <div class="col50">
           <h1>Welcome</h1>
           <p>
-            "Welcome to Blue Lagoons! Our cozy retreats are nestled in the heart of Sri Lanka. With comfortable rooms,
-             delicious dining, and attentive service, we're here to make your stay special. Relax by the pool, explo
-             re local attractions, or simply unwind in comfort. Your perfect getaway starts here at Blue Lagoons."
+            "Welcome to Blue Lagoons! Our cozy retreats are nestled in the heart
+            of Sri Lanka. With comfortable rooms, delicious dining, and
+            attentive service, we're here to make your stay special. Relax by
+            the pool, explo re local attractions, or simply unwind in comfort.
+            Your perfect getaway starts here at Blue Lagoons."
           </p>
         </div>
       </div>
@@ -96,20 +96,26 @@
       </div>
     </section>
 
-    <section class="sec2">
+    <section class="sec1">
       <div class="row">
-        <div class="col50 cont">
-          <div class="imgBx">
-            <h3>Plan your wedding with Us</h3>
-            <a href="wedding.html"><button>Book Now</button></a>
-            <img src="images/wedding.jpg" alt="image" class="images"/>
-          </div>
+        <div class="col50">
+          <h1>History</h1>
+          <p>
+            The ideology of our vision is to continue to apply and set the
+            highest standards of service quality and in that way justify and
+            uphold the reputation that we have among the guests, partners,
+            competitors and the wider community. We use and constantly introduce
+            environmentally friendly technologies and processes in order to
+            remain in balance with nature and also meet the needs of
+            contemporary society.Tradition is a testament to our success but in
+            the future we also want to embrace the changes that modern time
+            brings and become more attractive in the market and more interesting
+            to our guests and partners.
+          </p>
         </div>
-        <div class="col50 cont">
+        <div class="col50">
           <div class="imgBx">
-            <h3>Clebrate your Birthday with Us</h3>
-            <a href="birthday.html"><button>Book Now</button></a>
-            <img src="images/birthday4.jpg" alt="image" class="images"/>
+            <img src="images/history.jpg" alt="image" />
           </div>
         </div>
       </div>
@@ -119,7 +125,7 @@
       <div class="footer-section">
         <img src="images/logo-icon.jpg" alt="" class="logo-icon" />
         <p class="name">
-          Blue Lagoon <br/>
+          Blue Lagoon <br />
           <span class="motto">Where luxury becomes affortable</span>
         </p>
         <p class="name">
@@ -131,12 +137,22 @@
 
       <div class="footer-section center-icons">
         <ul class="icons">
-            <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-            <li><a href="#"><i class="bi bi-whatsapp"></i></a></li>
-            <li><a href="#"><i class="bi bi-messenger"></i></a></li>
-            <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-            <li><a href="#"><i class="bi bi-youtube"></i></a></li>
-          </ul>
+          <li>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bi bi-whatsapp"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bi bi-messenger"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="bi bi-youtube"></i></a>
+          </li>
+        </ul>
       </div>
 
       <div class="footer-section links">
@@ -151,5 +167,12 @@
         </ul>
       </div>
     </footer>
+
+    <script type="text/javascript">
+      window.addEventListener('scroll', function () {
+        const header = document.querySelector('header');
+        header.classList.toggle("sticky", window.scrollY > 0);
+      });
+    </script>
   </body>
 </html>
