--- a/restuarent.html
+++ b/restuarent.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restuarent</title>
-    <link rel="icon" href="images/logo-icon.jpg" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -13,6 +12,10 @@
   </head>
   <body>
     <header>
+      <div class="logo">
+        <a href="index.html"><img src="images/logo-icon.jpg" class="logo-icon"></a>
+      </div>
+
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -153,6 +156,25 @@
       </div>
     </section>
 
+    <section class="sec3">
+      <div class="row">
+        <div class="col50 cont">
+          <div class="imgBx">
+            <h4>Plan your wedding with Us</h4>
+            <a href="wedding.html"><button class="btn">Book Now</button></a>
+            <img src="images/wedding.jpg" alt="image" class="images" />
+          </div>
+        </div>
+        <div class="col50 cont">
+          <div class="imgBx">
+            <h4>Clebrate your Birthday with Us</h4>
+            <a href="birthday.html"><button class="btn">Book Now</button></a>
+            <img src="images/birthday4.jpg" alt="image" class="images" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="footer-section">
         <img src="images/logo-icon.jpg" alt="" class="logo-icon" />
@@ -199,5 +221,12 @@
         </ul>
       </div>
     </footer>
+
+    <script type="text/javascript">
+      window.addEventListener('scroll', function () {
+        const header = document.querySelector('header');
+        header.classList.toggle("sticky", window.scrollY > 0);
+      });
+    </script>
   </body>
 </html>
